compiled/node-example/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: node-example
spec:
  selector:
    app: node-example
  ports:
    - targetPort: 80
      port: 80
